# multi-broker-trading-system

./: .gitignore  CMakeLists.txt  README.md  structure.txt  vcpkg.json
src/: main.cpp
src/brokers/: BinanceBroker.cpp  BinanceBroker.h  ExnessBroker.cpp  ExnessBroker.h
src/core/: DataSource.cpp  DataSource.h  Logger.h  MarketDataManager.cpp  MarketDataManager.h  OrderManager.cpp  OrderManager.h  RiskManager.cpp  RiskManager.h  TradingEngine.cpp  TradingEngine.h
src/strategies/: BollingerBands.cpp  BollingerBands.h  EMA.cpp  EMA.h  Hedging.cpp  Hedging.h  RSI.cpp  RSI.h
